[package]
authors = ["Radu Matei <radu.matei@microsoft.com>"]
description = "Experimental HTTP library for WebAssembly in Wasmtime"
edition = "2018"
license = "MIT"
name = "wasi-experimental-http-wasmtime"
readme = "readme.md"
repository = "https://github.com/deislabs/wasi-experimental-http"
version = "0.6.0"

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
http = "0.2"
reqwest = {version = "0.11", default-features = true, features = ["json", "blocking"]}
thiserror = "1.0"
tokio = {version = "1.4.0", features = ["full"]}
tracing = {version = "0.1", features = ["log"]}
url = "2.2.1"
wasi-common = "0.31"
wasmtime = "0.31"
wasmtime-wasi = "0.31"
